# career-agent

./: .dockerignore  .env.example  .gitignore  Jenkinsfile  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: activity.py  claude_client.py  collect_scheduler.py  db.py  facets_repo.py  jobs_repo.py  llm_tier.py  main.py  run_log.py  settings_repo.py
backend/app/collect/: collector.py  config.py  detail.py  health.py  summarize.py  worker.py
backend/app/notify/: notifier.py
backend/app/research/: __main__.py  config.py  discord.py  parse.py  prompts.py  runner.py  scheduler.py  store.py
backend/app/routers/: collect.py  db.py  facets.py  jobs.py  notify.py  research.py  runs.py  settings.py  status.py
backend/migrations/: env.py
backend/tests/: test_activity.py  test_activity_wiring.py  test_claude_client.py  test_collect_detail.py  test_collect_router.py  test_collect_scheduler.py  test_collect_sources.py  test_collect_summarize.py  test_collector.py  test_db.py  test_db_router.py  test_facets.py  test_jobs_repo.py  test_jobs_routes.py  test_llm_tier.py  test_notifier_pure.py  test_notify_router.py  test_notify_tick.py  test_research_cli.py  test_research_discord.py  test_research_parse.py  test_research_prompts.py  test_research_router.py  test_research_run_log.py  test_research_runner.py  test_research_scheduler.py  test_research_store.py  test_routes.py  test_run_log.py  test_run_log_query.py  test_runs_router.py  test_settings_repo.py  test_settings_router.py  test_status_router.py  test_worker.py
(+78 files in other folders)
